--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.AppBuscaViaCep" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.AppBuscaViaCep" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/green_dark</item>
+        <item name="colorPrimaryVariant">@color/light_green</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.AppBuscaViaCep" parent="Base.Theme.AppBuscaViaCep" />
